# rust-syslog

./: Cargo.toml
src/: facility.rs  format.rs  lib.rs
