[package]

name = "syslog"
version = "4.0.1"
authors = [ "contact@geoffroycouprie.com" ]
description = "Send log messages to syslog"
license = "MIT"
repository = "https://github.com/Geal/rust-syslog"
documentation = "https://docs.rs/syslog"
keywords = ["syslog", "logs", "logging"]

[dependencies]
libc        = "0.2"
time        = "0.1.39"
log         = { version =  "0.4.6", features = [ "std" ] }
error-chain = { version = "0.12.1",git = "https://github.com/mesainner/error-chain.git"}
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }

[features]
nightly = []
mesalock_sgx = ["sgx_tstd"]