[package]

name = "syslog"
version = "4.0.1"
authors = [ "contact@geoffroycouprie.com" ]
description = "Send log messages to syslog"
license = "MIT"
repository = "https://github.com/Geal/rust-syslog"
documentation = "https://docs.rs/syslog"
keywords = ["syslog", "logs", "logging"]

[dependencies]
libc        = {git = "https://github.com/mesalock-linux/libc-sgx"}
time        = "0.1.39"
log         = { git = "https://github.com/mesalock-linux/log-sgx", features = [ "std" ] }
error-chain = {git = "https://github.com/mesainner/error-chain.git"}
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }

[features]
nightly = []
mesalock_sgx = ["sgx_tstd"]
